Updates for task3 fixes

--- a/Task3/src/app/modules/courses/course-item/course-item.component.html
+++ b/Task3/src/app/modules/courses/course-item/course-item.component.html
@@ -1,7 +1,7 @@
 <div class="item">
     <h2>Video course: {{item.title}}</h2>
-    <span>{{item.duration}}</span> <span>{{item.courseTime}}</span>
-    <p>{{item.description}}</p>
-    <button (click)="editCourse($event)">Edit</button>
-    <button (click)="deleteCourse($event)">Delete</button>
+    <span class="duration">{{item.duration}}</span> <span class="course-time">{{item.courseTime}}</span>
+    <p class="description">{{item.description}}</p>
+    <button (click)="editCourse($event)" class="btn-edit">Edit</button>
+    <button (click)="deleteCourse($event)" class="btn-delete">Delete</button>
 </div>
