--- a/Task3/src/app/modules/courses/course-list/course-list.component.html
+++ b/Task3/src/app/modules/courses/course-list/course-list.component.html
@@ -1,7 +1,9 @@
 <div class="add-new-course">
     <button (click)="addCourse()">+ Add course</button>
 </div>
-<app-course-item *ngFor="let item of items" [item]="item" (deleteItem)="update($event)" (editItem)="update($event)">
+<div class="action-status">{{actionStatus}}</div>
+<app-course-item *ngFor="let item of items" [item]="item" (deleteItem)="update($event, 'deleted')"
+    (editItem)="update($event, 'edited')">
 </app-course-item>
 <div class="load-more">
     <a href="#">Load more</a>
