--- a/Task4/src/app/modules/courses/courses.component.html
+++ b/Task4/src/app/modules/courses/courses.component.html
@@ -1,4 +1,3 @@
 <div class="pageContainer">
-    <app-search-courses></app-search-courses>
-    <app-course-list></app-course-list>
+    <app-course-list (searchItem)="filterItem($event)"></app-course-list>
 </div>
