--- a/Task4/src/app/modules/courses/course-list/course-list.component.html
+++ b/Task4/src/app/modules/courses/course-list/course-list.component.html
@@ -1,12 +1,16 @@
-<div class="add-new-course">
+<app-search-courses (searchItem)="filterItem($event)"></app-search-courses>
+
+<div class="course-list-header">
+    <div class="action-status">{{actionStatus}}</div>
     <button (click)="addCourse()" class="btn btn-add-course"> + Add course</button>
 </div>
-<div class="action-status">{{actionStatus}}</div>
+
 <div *ngIf="items?.length > 0" class="course-items">
-    <app-course-item *ngFor="let item of items" [item]="item" (deleteItem)="delete($event)" (editItem)="update($event)">
+    <app-course-item *ngFor="let item of items | orderBy:'creationTime':'asc'" [item]="item"
+        (deleteItem)="delete($event)" (editItem)="update($event)" [appFormatCourseItem]="item">
     </app-course-item>
 </div>
-<div *ngIf="items?.length == 0">
+<div *ngIf="items?.length == 0" class="course-items action-status ">
     <span>No courses found. Please feel free to add courses.</span>
 </div>
 
