--- a/Task4/src/app/modules/courses/search-courses/search-courses.component.html
+++ b/Task4/src/app/modules/courses/search-courses/search-courses.component.html
@@ -1,4 +1,4 @@
 <div class="search-container">
     <input type="search" [(ngModel)]="searchText" placeholder="Text to search">
-    <button (click)="searchCourses()" class="btn btn-search">Search</button>
+    <button (click)="filterCourses()" class="btn btn-search">Search</button>
 </div>
