--- a/Task4/src/styles/_palette.scss
+++ b/Task4/src/styles/_palette.scss
@@ -5,10 +5,12 @@ $color-white: #ffffff;
 $color-green: #9bc837;
 $color-green-dark: #3a4d12;
 $color-blue: #30b6dd;
+$color-orange: #f5e1b5;
 
 $color-primary: $color-black;
 $color-primary-btn: $color-white;
 $color-primary-colored: $color-red;
+$color-top-rated: $color-orange;
 
 $color-focus-outline: rgb(59, 153, 252);
 
