--- a/Task4/src/styles/_variables.scss
+++ b/Task4/src/styles/_variables.scss
@@ -3,6 +3,7 @@
 $font-base-size: 11px;
 
 $max-page-width: 1240px;
+$min-page-width: 1080px;
 
 $input-lineheight: 1.75rem;
 $btn-lineheight: 0.85rem;
