--- a/Task5/src/app/modules/authentication/login/login.component.html
+++ b/Task5/src/app/modules/authentication/login/login.component.html
@@ -5,13 +5,13 @@
                 <h2>Login</h2>
             </div>
             <div class="formBody">
-                <span class="form-element-label required">Login</span>
+                <span class="formElementLabel required">E-mail:</span>
                 <input type="text" placeholder="Enter user name">
-                <span class="form-element-label required">Password</span>
+                <span class="formElementLabel required">Password:</span>
                 <input type="text" placeholder="Enter password">
             </div>
-            <div class="form-footer">
-                <a href="/forgot-password">Forgot password?</a>
+            <div class="formFooter">
+                <button class="btn link" routerLink="/forgot-password">Forgot password?</button>
                 <button class="btn">Login</button>
             </div>
         </div>
