--- a/Task5/src/app/modules/authentication/login/login.component.scss
+++ b/Task5/src/app/modules/authentication/login/login.component.scss
@@ -1,3 +1,5 @@
+@import '../../../../styles/_variables';
+
 :host {
     display: flex;
     align-content: center;
@@ -12,6 +14,6 @@
     border-radius: 8px;
     box-shadow: 0 1px 24px 0 #12152314;
     background-color: #ffffff;
-    padding: 3em;
+    padding: 0 2em;
     margin: 2em;
 }
