updates for task 5

--- a/Task5/src/app/shared/components/header/header.component.scss
+++ b/Task5/src/app/shared/components/header/header.component.scss
@@ -28,6 +28,11 @@
   display:flex;
   padding: 0 1em;
 }
+
+.header-message {
+  align-self: center;
+}
+
 .btn-menu {
   display: inline-flex;
   margin: 0;
