--- a/Task5/src/styles/partials/forms.scss
+++ b/Task5/src/styles/partials/forms.scss
@@ -1,39 +1,44 @@
 @import '_variables';
 @import '_mixins';
 
-.formControllers {
+.form-controller {
     line-height: normal;
     display: flex;
     flex-direction: column;
     min-width: $modal-min-width;
 }
 
-.formControllers > .formHeader {
+.form-controller > .form-header {
     color: $color-primary;
     display: flex;
     justify-content: flex-start;
     align-items: flex-start;
 }
 
-.formControllers > .formBody {
+.form-controller > .form-body {
     line-height: 2em;
     display: flex;
     flex-direction: column;
 }
 
-.formControllers > .formFooter {
+.form-controller > .form-footer {
     line-height: 2em;
     display: flex;
     flex-direction: row;
     padding: 2em 0;
 }
 
-.formBody > .formElementRow {
+.form-body > .form-element-row {
     font-weight: bold;
     display: flex;
     flex-direction: row;
 }
 
-.formBody .formElementLabel {
+.form-body .form-element-label {
     font-weight: bold;
+}
+
+.required::after {
+    content: " *";
+    color: $color-red;
 }
