--- a/Task5/src/app/pages/courses/courses.component.html
+++ b/Task5/src/app/pages/courses/courses.component.html
@@ -1,3 +1,3 @@
-<div class="pageContainer">
+<div class="page-container">
     <app-course-list (searchItem)="filterItem($event)"></app-course-list>
 </div>
