--- a/Task5/src/app/shared/components/bread-crumb/bread-crumb.component.html
+++ b/Task5/src/app/shared/components/bread-crumb/bread-crumb.component.html
@@ -1,3 +1,3 @@
-<div class="bread-crumb">
+<div class="bread-crumb" *ngIf="isAuthenticated()">
     <a class="link" href="/courses">Courses</a>
 </div>
