--- a/Task5/src/styles/global.scss
+++ b/Task5/src/styles/global.scss
@@ -28,7 +28,7 @@ body {
     display: flex;
 }
 
-.pageContainer {
+.page-container {
     margin: 0 auto;
     max-width: $max-page-width;
     padding: 3em;
