minor updates for task5

--- a/Task5/src/app/pages/login/login.component.html
+++ b/Task5/src/app/pages/login/login.component.html
@@ -7,14 +7,14 @@
             <div class="form-body">
                 <label class="form-element-label required" for="email">E-mail:</label>
                 <input type="email" id="email" placeholder="Enter email address" formControlName="email">
-                <app-app-field-display-error [displayError]="isFieldValid('email')"
+                <app-field-display-error [displayError]="isFieldValid('email')"
                     errorMsg="Please enter your email (admin@epam.com)">
-                </app-app-field-display-error>
+                </app-field-display-error>
                 <label class="form-element-label required" for="password">Password:</label>
                 <input type="password" id="password" placeholder="Enter password" formControlName="password">
-                <app-app-field-display-error [displayError]="isFieldValid('password')"
+                <app-field-display-error [displayError]="isFieldValid('password')"
                     errorMsg="Password is required. (password)">
-                </app-app-field-display-error>
+                </app-field-display-error>
             </div>
             <div class="form-footer">
                 <button class="btn link" routerLink="/forgot-password" type="button">Forgot password?</button>
