--- a/Task/src/app/shared/components/course-item/course-item.component.html
+++ b/Task/src/app/shared/components/course-item/course-item.component.html
@@ -10,7 +10,7 @@
         <div class="description">{{item.description}}</div>
     </div>
     <div class="item-right">
-        <button (click)="editCourse()" class="btn btn-edit">Edit</button>
+        <button class="btn btn-edit" type="button" routerLink="/course/edit">Edit</button>
         <button (click)="deleteCourse()" class="btn btn-delete">Delete</button>
     </div>
 </div>
