--- a/Task/src/styles/_palette.scss
+++ b/Task/src/styles/_palette.scss
@@ -12,7 +12,8 @@ $color-primary: $color-black;
 $color-primary-btn: $color-white;
 $color-primary-colored: $color-red;
 $color-top-rated: $color-orange;
-$color-disabled: rgb(150, 149, 149);
+$color-disabled: #d9dbe3;
+$color-link: #5681ee;
 
 $color-focus-outline: rgb(59, 153, 252);
 
