--- a/Task/src/styles/partials/forms.scss
+++ b/Task/src/styles/partials/forms.scss
@@ -5,20 +5,21 @@
     line-height: normal;
     display: flex;
     flex-direction: column;
-    min-width: $modal-min-width;
+    width: 100%;
 }
 
-.form-controller > .form-header {
+.form-fieldset {
+    display: flex;
+    border: 0 none;
+}
+
+.form-fieldset > .form-header {
     color: $color-primary;
     display: flex;
     justify-content: flex-start;
     align-items: flex-start;
-}
-
-.form-controller > .form-body {
-    line-height: 2em;
-    display: flex;
-    flex-direction: column;
+    font-size: 2em;
+    font-weight: bold;
 }
 
 .form-controller > .form-footer {
@@ -28,17 +29,30 @@
     padding: 2em 0;
 }
 
-.form-body > .form-element-row {
+.form-fieldset > .form-field {
     font-weight: bold;
     display: flex;
     flex-direction: row;
+    padding: 0.5em 0;
 }
 
-.form-body .form-element-label {
+.form-field-half {
+    width: 50%;
+}
+
+.form-field-quarter {
+    width: 25%;
+}
+
+.form-field > label {
     font-weight: bold;
+    width:100%;
+    line-height: 2em;
+    font-size: 1em;
 }
 
-.required::after {
-    content: " *";
-    color: $color-red;
+.form-field label .required::after {
+    content: "* required";
+    color: #6c7283;
+    font-size: 0.8em;
 }
