--- a/Task/src/app/pages/login/login.component.html
+++ b/Task/src/app/pages/login/login.component.html
@@ -1,21 +1,29 @@
 <div class="page-container">
-    <div class="loginContainer">
+    <div class="login-container">
         <form class="form-controller" [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-            <div class="form-header">
-                <h2>Login</h2>
-            </div>
-            <div class="form-body">
-                <label class="form-element-label required" for="email">E-mail:</label>
-                <input type="email" id="email" placeholder="Enter email address" formControlName="email">
-                <app-field-display-error [displayError]="isFieldValid('email')"
-                    errorMsg="Please enter your email (admin@epam.com)">
-                </app-field-display-error>
-                <label class="form-element-label required" for="password">Password:</label>
-                <input type="password" id="password" placeholder="Enter password" formControlName="password">
-                <app-field-display-error [displayError]="isFieldValid('password')"
-                    errorMsg="Password is required. (password)">
-                </app-field-display-error>
-            </div>
+            <fieldset class="form-fieldset">
+                <legend class="form-header">Login</legend>
+                <div class="form-field">
+                    <label for="email">Email:
+                        <span class="required"></span>
+                        <input type="email" id="email" placeholder="Enter email address" formControlName="email"
+                            required>
+                        <app-validation [displayError]="isFieldValid('email')"
+                            errorMsg="Please enter your email (admin@epam.com)">
+                        </app-validation>
+                    </label>
+                </div>
+                <div class="form-field">
+                    <label for="password">Password:
+                        <span class="required"></span>
+                        <input type="password" id="password" placeholder="Enter password" formControlName="password"
+                            required>
+                        <app-validation [displayError]="isFieldValid('password')"
+                            errorMsg="Password is required. (password)">
+                        </app-validation>
+                    </label>
+                </div>
+            </fieldset>
             <div class="form-footer">
                 <button class="btn link" routerLink="/forgot-password" type="button">Forgot password?</button>
                 <button class="btn" [disabled]="!loginForm.valid">Login</button>
