--- a/Task/src/app/shared/components/validation/validation.component.html
+++ b/Task/src/app/shared/components/validation/validation.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="displayError">
+<div *ngIf="displayError" class="error">
     <span class="glyphicon glyphicon-remove form-control-feedback fix-error-icon"></span>
     <div class="error-msg">
         {{errorMsg}}
