--- a/Task/src/app/pages/courses/course-list/course-list.component.html
+++ b/Task/src/app/pages/courses/course-list/course-list.component.html
@@ -2,7 +2,7 @@
 
 <div class="course-list-header">
     <div class="action-status">{{actionStatus}}</div>
-    <button class="btn btn-add-course" routerLink="/course/add"> + Add course</button>
+    <button class="btn btn-add-course" routerLink="/courses/new"> + Add course</button>
 </div>
 
 <div *ngIf="items?.length > 0" class="course-items">
