--- a/Task/src/app/shared/components/page-not-found/page-not-found.component.html
+++ b/Task/src/app/shared/components/page-not-found/page-not-found.component.html
@@ -1,3 +1,7 @@
-<h5>
-    Oops! Page not found.
-</h5>
+<div class="page-container">
+    <p>
+        <a class="link" routerLink="/">Back to home</a>
+    </p>
+    <h2>Oops! Page not found.</h2>
+    <h4>{{messag}} </h4>
+</div>
