--- a/Task/src/app/pages/login/login.component.html
+++ b/Task/src/app/pages/login/login.component.html
@@ -3,26 +3,10 @@
         <form class="form-controller" [formGroup]="loginForm" (ngSubmit)="onSubmit()">
             <fieldset class="form-fieldset">
                 <legend class="form-header">Login</legend>
-                <div class="form-field">
-                    <label for="email">Email:
-                        <span class="required"></span>
-                        <input type="email" id="email" placeholder="Enter email address" formControlName="email"
-                            required>
-                        <app-validation [displayError]="isFieldValid('email')"
-                            errorMsg="Please enter your email (admin@epam.com)">
-                        </app-validation>
-                    </label>
-                </div>
-                <div class="form-field">
-                    <label for="password">Password:
-                        <span class="required"></span>
-                        <input type="password" id="password" placeholder="Enter password" formControlName="password"
-                            required>
-                        <app-validation [displayError]="isFieldValid('password')"
-                            errorMsg="Password is required. (password)">
-                        </app-validation>
-                    </label>
-                </div>
+                <app-form-field-wrapper *ngFor="let item of loginFields" [formItem]="item" [formGroup]="loginForm">
+                    <input [type]="item.name" [id]="item.name" [placeholder]="item.hint" [formControlName]="item.name"
+                        [required]="!item.optional">
+                </app-form-field-wrapper>
             </fieldset>
             <div class="form-footer">
                 <button class="btn link" routerLink="/forgot-password" type="button">Forgot password?</button>
