--- a/Task/src/app/shared/components/bread-crumb/bread-crumb.component.html
+++ b/Task/src/app/shared/components/bread-crumb/bread-crumb.component.html
@@ -1,3 +1,12 @@
-<div class="bread-crumb" *ngIf="isAuthenticated()">
-    <a class="link" href="/courses">Courses</a>
+<div class="breadcrumb" *ngIf="isAuthenticated()">
+    <ul>
+        <li *ngFor="let menuItem of breadcrumbs; let i = index">
+            <ng-container *ngIf="!isLastItem(i); else lastBreadCrumb">
+                <a class="link" [routerLink]="menuItem.path">{{menuItem.label}}</a>
+            </ng-container>
+            <ng-template #lastBreadCrumb>
+                <span>{{menuItem.label}}</span>
+            </ng-template>
+        </li>
+    </ul>
 </div>
