--- a/Task/src/app/shared/components/course-item-details/course-item-details.component.html
+++ b/Task/src/app/shared/components/course-item-details/course-item-details.component.html
@@ -2,47 +2,39 @@
     <div class="item-details-container">
         <form class="form-controller" [formGroup]="itemDetailsForm" (ngSubmit)="onSubmit()">
             <fieldset class="form-fieldset">
-                <legend class="form-header">New / Edit Course</legend>
-                <div class="form-field">
-                    <label for="title">Title:
-                        <span class="required"></span>
-                        <input type="text" placeholder="Enter Title" id="title" formControlName="title">
-                        <app-validation [displayError]="isFieldValid('email')"
-                            errorMsg="Please enter your email (admin@epam.com)">
-                        </app-validation>
-                    </label>
-                </div>
-                <div class="form-field">
-                    <label for="description">Description:
-                        <span class="required"></span>
-                        <textarea placeholder="Enter course description" id="description" rows="5"
-                            formControlName="description"></textarea>
-                        <app-validation [displayError]="isFieldValid('email')"
-                            errorMsg="Please enter your email (admin@epam.com)">
-                        </app-validation>
-                    </label>
-                </div>
-                <div class="form-field form-field-quarter">
-                    <label for="">Date:
-                        <span class="required"></span>
-                        <app-date-picker></app-date-picker>
-                    </label>
-                </div>
-                <div class="form-field form-field-quarter">
-                    <label for="">Durations:
-                        <span class="required"></span>
-                        <app-durations></app-durations>
-                    </label>
-                </div>
-                <div class="form-field form-field-half">
-                    <label for="">Authors:
-                        <span class="required"></span>
-                        <app-users-picker></app-users-picker>
-                    </label>
-                </div>
+                <legend class="form-header" *ngIf="item && !readOnly">Editing {{item.title}}</legend>
+                <legend class="form-header" *ngIf="item && readOnly">Displaying {{item.title}}</legend>
+                <legend class="form-header" *ngIf="!item">Enter New Course Details</legend>
+                <app-form-field-wrapper [formItem]="itemDetailFields[0]" [formGroup]="itemDetailsForm">
+                    <input [type]="itemDetailFields[0].type" [id]="itemDetailFields[0].name"
+                        [placeholder]="itemDetailFields[0].hint" [formControlName]="itemDetailFields[0].name"
+                        [required]="!itemDetailFields[0].optional" [readonly]="itemDetailFields[0].readonly">
+                </app-form-field-wrapper>
+
+                <app-form-field-wrapper [formItem]="itemDetailFields[1]" [formGroup]="itemDetailsForm">
+                    <textarea [id]="itemDetailFields[1].name" [placeholder]="itemDetailFields[1].hint"
+                        [formControlName]="itemDetailFields[1].name" [required]="!itemDetailFields[1].optional"
+                        [readonly]="itemDetailFields[0].readonly" rows="5"></textarea>
+                </app-form-field-wrapper>
+
+                <app-form-field-wrapper [formItem]="itemDetailFields[2]" [formGroup]="itemDetailsForm">
+                    <app-date-picker [formFieldItem]="itemDetailFields[2]" [formControlName]="itemDetailFields[2].name">
+                    </app-date-picker>
+                </app-form-field-wrapper>
+
+                <app-form-field-wrapper [formItem]="itemDetailFields[3]" [formGroup]="itemDetailsForm">
+                    <app-durations [formFieldItem]="itemDetailFields[3]" [formControlName]="itemDetailFields[3].name">
+                    </app-durations>
+                </app-form-field-wrapper>
+
+                <app-form-field-wrapper [formItem]="itemDetailFields[4]" [formGroup]="itemDetailsForm">
+                    <app-users-picker [formFieldItem]="itemDetailFields[4]"
+                        [formControlName]="itemDetailFields[4].name">
+                    </app-users-picker>
+                </app-form-field-wrapper>
             </fieldset>
             <div class="form-footer">
-                <button class="btn" type="reset">Cancel</button>
+                <button class="btn" type="button" routerLink="/courses">Cancel</button>
                 <button class="btn" [disabled]="!itemDetailsForm.valid">Save</button>
             </div>
         </form>
