--- a/src/styles/_palette.scss
+++ b/src/styles/_palette.scss
@@ -1,7 +1,7 @@
 
 $color-black: #141413;
 $color-red: red;
-$color-white: #ffffff;
+$color-white: #fefefe;
 $color-green: #9bc837;
 $color-green-dark: #3a4d12;
 $color-blue: #30b6dd;
