--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -19,8 +19,12 @@ $hover-alpha: .6;
 
 // spacings
 $base-spacing: 1rem;
+$small-spacing: 0.5rem;
+$big-spacing: 2rem;
+$huge-spacing: 3rem;
 
 // outline
 $focus-outline: $color-focus-outline auto 5px;
 
 $modal-min-width: 360px;
+$modal-max-width: 700px;
