--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -43,3 +43,6 @@ body {
 @import './partials/buttons.scss';
 @import './partials/inputs.scss';
 @import './partials/forms.scss';
+@import './partials/modal.scss';
+@import './partials/text.scss';
+@import './partials/headings.scss';
