--- a/src/styles/partials/inputs.scss
+++ b/src/styles/partials/inputs.scss
@@ -43,4 +43,5 @@ input[type=search] {
     background-color: $bg-color-primary;
     flex: 0 0 auto;
     padding: 0 3em;
+    line-height: 2.5em;
 }
