--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -6,8 +6,7 @@
     </div>
 
     <div class="headerRight">
-        <button class="btn link btn-menu btn-menu-login" routerLink="/login" *ngIf="!isAuthenticated()">User
-            Login</button>
+        <button class="btn link btn-menu btn-menu-login" routerLink="/login" *ngIf="!isAuthenticated()">Login</button>
         <button class="btn link btn-menu btn-menu-logout" (click)="logout()" *ngIf="isAuthenticated()">Log out</button>
     </div>
 </div>
