--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -2,11 +2,11 @@
     <div class="headerLeft">
         <img src="assets/images/logo.svg" alt="{{title}}">
         <h2 class="header-title">{{title}}</h2>
-        <div class="header-message" *ngIf="isAuthenticated()">Welcome {{name.last}}, {{name.first}}</div>
+        <div class="header-message" *ngIf="name$ | async as name">Welcome {{name.last}}, {{name.first}}</div>
     </div>
 
     <div class="headerRight">
-        <button class="btn link btn-menu btn-menu-login" routerLink="/login" *ngIf="!isAuthenticated()">Login</button>
-        <button class="btn link btn-menu btn-menu-logout" (click)="logout()" *ngIf="isAuthenticated()">Log out</button>
+        <button class="btn link btn-menu btn-menu-login" routerLink="/login" *ngIf="(isAuthenticated$ | async) === false">Login</button>
+        <button class="btn link btn-menu btn-menu-logout" (click)="logout()" *ngIf="isAuthenticated$ | async">Log out</button>
     </div>
 </div>
