--- a/src/app/shared/components/page-not-found/page-not-found.component.html
+++ b/src/app/shared/components/page-not-found/page-not-found.component.html
@@ -3,5 +3,5 @@
         <a class="link" routerLink="/">Back to home</a>
     </p>
     <h2>Oops! Page not found.</h2>
-    <h4>{{messag}} </h4>
+    <h4>{{message}} </h4>
 </div>
