Adding configurational changes

--- a/src/styles/_palette.scss
+++ b/src/styles/_palette.scss
@@ -9,6 +9,7 @@ $color-orange: #f5e1b5;
 
 
 $color-primary: $color-black;
+$color-primary-background: $color-white;
 $color-primary-btn: $color-white;
 $color-primary-colored: $color-red;
 $color-top-rated: $color-orange;
