--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,6 +1,7 @@
 @import './palette';
 
 $font-base-size: 11px;
+$font-face-icons: 'Task Icons';
 
 $max-page-width: 1240px;
 $min-page-width: 1080px;
