Fixes for dropdown and date picker

--- a/src/app/shared/components/course-item-details/course-item-details.component.html
+++ b/src/app/shared/components/course-item-details/course-item-details.component.html
@@ -25,9 +25,7 @@
                 </app-form-field-wrapper>
 
                 <app-form-field-wrapper [formItem]="itemDetailFields[4]" [formGroup]="itemDetailsForm">
-                    <app-users-picker [formFieldItem]="itemDetailFields[4]"
-                        [formControlName]="itemDetailFields[4].name">
-                    </app-users-picker>
+                    <app-users-picker [formFieldItem]="itemDetailFields[4]"></app-users-picker>
                 </app-form-field-wrapper>
 
                     <input [type]="itemDetailFields[5].type" [id]="itemDetailFields[5].name"
