--- a/src/app/shared/components/forms/select/select.component.html
+++ b/src/app/shared/components/forms/select/select.component.html
@@ -4,5 +4,8 @@
     [multiple]="multiple" 
     [placeholder]="placeholder"
     [bindLabel]="bindLabel"
-    [bindValue]="bindValue">
+    [bindValue]="bindValue"
+    [closeOnSelect]="!multiple"
+    [clearable]="false"
+    >
 </ng-select>
